<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="login">Login</string>
    <string name="sign_out">sign Out</string>
    <string name="post_title">Post Title...</string>
    <string name="post_description">Post Description</string>
    <string name="submit_post">Submit</string>
    <string name="add_post">Add Post</string>
    <string name="signout">Signout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
</resources>